# prosoftschool2023

./: .gitignore
template_comparision_task/: CMakeLists.txt  b.h  first_task.h  hasoperators.h  main.cpp  othercomparisonoperators.h  second_task.h
template_comparision_task/test/: tests.cpp  tests.h
